--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,17 @@ dependencies:
   firebase_auth: ^5.1.2
   fl_chart: ^0.68.0
   intl: ^0.19.0
+  icons_flutter: ^0.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/project.jpg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
